--- a/dia04/lista-filmes/style.css
+++ b/dia04/lista-filmes/style.css
@@ -56,7 +56,7 @@ body {
   font-weight: bold;
   padding: 15px 20px;
   font-size: 16px;
-  borde-radius: 5px;
+  border-radius: 5px;
   margin-top: 20px;
   cursor: pointer;
   transition: 0.3s;
